# PolyMarket

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
cli/: __init__.py  commands.py
config/: settings.py
scripts/: setup_db.py
src/: __init__.py
src/connectors/: __init__.py
src/connectors/polymarket/: __init__.py  adapter.py  client.py  schemas.py
src/core/: __init__.py  ingestion.py  interfaces.py  observability.py
src/models/: __init__.py  market.py  orderbook.py  price.py  trade.py
src/storage/: __init__.py  postgres.py
tests/unit/: test_polymarket_client.py  test_schemas.py
